Fixed index horizontal scrolling and text cut off on smaller screens

--- a/static/teamGS.css
+++ b/static/teamGS.css
@@ -1,10 +1,6 @@
 #logoText {
     font-weight: 900;
     font-size: 40px;
-    /* text-shadow: -1px 1px 0px black,
-                  1px 1px 0 black,
-                  1px -1px 0 black,
-                  -1px -1px 0 black;  */
 }
 
 .navBarItem {
@@ -85,11 +81,6 @@ body.index {
     margin: auto auto 0;
 }
 
-
-/* body {
-    height: 100%;
-} */
-
 .full {
     height: 100%;
     margin: 0;
@@ -140,17 +131,14 @@ a.description {
     line-height: 150%;
 }
 
-/* .navbar-nav > li{
-    padding-left:30px;
-    padding-right:30px;
-  } */
-
 .min-100 {
     min-height: 100%;
 }
 
 html, body {
     height: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .indexPic {
